Use last rule-engine multiplatform version